// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RelatedServiceListEditorHeader should hide grant agency type input 1`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1ulijmd-MuiListItem-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1l3uuuo-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-10 MuiGrid-grid-sm-11 MuiGrid-grid-md-9 css-19a21ue-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-d64g0g-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 css-1qcs568-MuiGrid-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Related Service ID
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-3 css-zipgpn-MuiGrid-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Related Service Description
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 MuiGrid-grid-sm-1 MuiGrid-grid-md-3 css-13bwnp6-MuiGrid-root"
      >
        <div
          class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
          style="position: relative; width: 100%; margin: 0px 0px -32px 0px;"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-d64g0g-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-8 css-1uzkkp6-MuiGrid-root"
            >
              <div
                class="MuiListItemText-root css-1bfygtv-MuiListItemText-root"
                style="padding: 0px;"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
                >
                  Reorder entries
                </span>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-4 css-1oxte1b-MuiGrid-root"
              style="text-align: right;"
            >
              <div
                aria-label="Remove all entries"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Remove all entries"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="DeleteForeverIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zm2.46-7.12 1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`RelatedServiceListEditorHeader should render default mobile view 1`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1ulijmd-MuiListItem-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1l3uuuo-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-10 MuiGrid-grid-sm-11 MuiGrid-grid-md-9 css-19a21ue-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-d64g0g-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 css-1qcs568-MuiGrid-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Related Service ID
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-3 css-zipgpn-MuiGrid-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Related Service Description
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 MuiGrid-grid-sm-1 MuiGrid-grid-md-3 css-13bwnp6-MuiGrid-root"
      >
        <div
          class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
          style="position: relative; width: 100%; margin: 0px 0px -32px 0px;"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-d64g0g-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-8 css-1uzkkp6-MuiGrid-root"
            >
              <div
                class="MuiListItemText-root css-1bfygtv-MuiListItemText-root"
                style="padding: 0px;"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
                >
                  Reorder entries
                </span>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
              style="text-align: right;"
            >
              <div
                aria-label="Remove all entries"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Remove all entries"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="DeleteForeverIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zm2.46-7.12 1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`RelatedServiceListEditorHeader should render default mobile view 2`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1ulijmd-MuiListItem-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1l3uuuo-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-10 MuiGrid-grid-sm-11 MuiGrid-grid-md-9 css-19a21ue-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-d64g0g-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 css-1qcs568-MuiGrid-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Related Service ID
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-3 css-zipgpn-MuiGrid-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Related Service Description
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 MuiGrid-grid-sm-1 MuiGrid-grid-md-3 css-13bwnp6-MuiGrid-root"
      >
        <div
          class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
          style="position: relative; width: 100%; margin: 0px 0px -32px 0px;"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-d64g0g-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-8 css-1uzkkp6-MuiGrid-root"
            >
              <div
                class="MuiListItemText-root css-1bfygtv-MuiListItemText-root"
                style="padding: 0px;"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
                >
                  Reorder entries
                </span>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
              style="text-align: right;"
            >
              <div
                aria-label="Remove all entries"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Remove all entries"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="DeleteForeverIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zm2.46-7.12 1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`RelatedServiceListEditorHeader should render default view 1`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1ulijmd-MuiListItem-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1l3uuuo-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-10 MuiGrid-grid-sm-11 MuiGrid-grid-md-9 css-19a21ue-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-d64g0g-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 css-1qcs568-MuiGrid-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Related Service ID
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-3 css-zipgpn-MuiGrid-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Related Service Description
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 MuiGrid-grid-sm-1 MuiGrid-grid-md-3 css-13bwnp6-MuiGrid-root"
      >
        <div
          class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
          style="position: relative; width: 100%; margin: 0px 0px -32px 0px;"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-d64g0g-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-8 css-1uzkkp6-MuiGrid-root"
            >
              <div
                class="MuiListItemText-root css-1bfygtv-MuiListItemText-root"
                style="padding: 0px;"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
                >
                  Reorder entries
                </span>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-4 css-1oxte1b-MuiGrid-root"
              style="text-align: right;"
            >
              <div
                aria-label="Remove all entries"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Remove all entries"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="DeleteForeverIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zm2.46-7.12 1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`RelatedServiceListEditorHeader should render with default props 1`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1ulijmd-MuiListItem-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1l3uuuo-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-10 MuiGrid-grid-sm-11 MuiGrid-grid-md-9 css-19a21ue-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-d64g0g-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 css-1qcs568-MuiGrid-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Related Service ID
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-3 css-zipgpn-MuiGrid-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Related Service Description
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 MuiGrid-grid-sm-1 MuiGrid-grid-md-3 css-13bwnp6-MuiGrid-root"
      >
        <div
          class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
          style="position: relative; width: 100%; margin: 0px 0px -32px 0px;"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-d64g0g-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-8 css-1uzkkp6-MuiGrid-root"
            >
              <div
                class="MuiListItemText-root css-1bfygtv-MuiListItemText-root"
                style="padding: 0px;"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
                >
                  Reorder entries
                </span>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-4 css-1oxte1b-MuiGrid-root"
              style="text-align: right;"
            >
              <div
                aria-label="Remove all entries"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Remove all entries"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="DeleteForeverIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zm2.46-7.12 1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`RelatedServiceListEditorHeader should show confirmation box 1`] = `
<div
  aria-hidden="true"
>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1ulijmd-MuiListItem-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1l3uuuo-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-10 MuiGrid-grid-sm-11 MuiGrid-grid-md-9 css-19a21ue-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-d64g0g-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 css-1qcs568-MuiGrid-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Related Service ID
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-3 css-zipgpn-MuiGrid-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Related Service Description
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 MuiGrid-grid-sm-1 MuiGrid-grid-md-3 css-13bwnp6-MuiGrid-root"
      >
        <div
          class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
          style="position: relative; width: 100%; margin: 0px 0px -32px 0px;"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-d64g0g-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-8 css-1uzkkp6-MuiGrid-root"
            >
              <div
                class="MuiListItemText-root css-1bfygtv-MuiListItemText-root"
                style="padding: 0px;"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
                >
                  Reorder entries
                </span>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-4 css-1oxte1b-MuiGrid-root"
              style="text-align: right;"
            >
              <div
                aria-label="Remove all entries"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Remove all entries"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="DeleteForeverIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zm2.46-7.12 1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;
